# ks-robo-car

./: CMakeLists.txt  package.xml
config/: ball_tracker_params_robot.yaml  ball_tracker_params_sim.yaml  car_controllers.yaml  diff_drive.rviz  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml  view_bot.rviz
description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: ball_tracker.launch.py  camera.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rplidar.launch.py  rsp.launch.py
map/: gaz_map.pgm  gaz_map.yaml  gaz_map_serial.data  static_map.pgm  static_map.yaml  static_map_serial.data
